# whisker

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  asteroids-example.1  build-generics.csv  build-generics.sh  conanfile.txt  shell.html  web.sh
benchmarks/: CMakeLists.txt  benchmark_whisker_arena.c  benchmark_whisker_component_registry.c  benchmark_whisker_ecs_world.c  benchmark_whisker_hash_algos.c  benchmark_whisker_hashmap.c  benchmark_whisker_iteration.c  benchmark_whisker_memory.c  benchmark_whisker_sparse_bitset.c  benchmark_whisker_time.c
src/: CMakeLists.txt  asteroids-example.c  asteroids-v2-example.c  whisker.h  whisker_arena.c  whisker_arena.h  whisker_array.c  whisker_array.h  whisker_array_internal.c  whisker_array_internal.h  whisker_block_array.c  whisker_block_array.h  whisker_buffered_sparse_set.c  whisker_buffered_sparse_set.h  whisker_command_buffer.c  whisker_command_buffer.h  whisker_component_registry.c  whisker_component_registry.h  whisker_debug.c  whisker_debug.h  whisker_dict.c  whisker_dict.h  whisker_ecs.c  whisker_ecs.h  whisker_ecs_archetype.c  whisker_ecs_archetype.h  whisker_ecs_component.c  whisker_ecs_component.h  whisker_ecs_deferred_actions.c  whisker_ecs_entity.c  whisker_ecs_entity.h  whisker_ecs_entity_api.c  whisker_ecs_entity_pool.c  whisker_ecs_entity_types.h  whisker_ecs_err.h  whisker_ecs_event.c  whisker_ecs_event.h  whisker_ecs_iterator.c  whisker_ecs_module_component_change_events.c  whisker_ecs_module_component_change_events.h  (+56 more)
src/generics/: whisker_generic_array.c  whisker_generic_array.h  whisker_generic_array_char.c  whisker_generic_array_char.h  whisker_generic_array_double.c  whisker_generic_array_double.h  whisker_generic_array_float.c  whisker_generic_array_float.h  whisker_generic_array_int.c  whisker_generic_array_int.h  whisker_generic_array_long.c  whisker_generic_array_long.h  whisker_generic_array_long_double.c  whisker_generic_array_long_double.h  whisker_generic_array_long_long.c  whisker_generic_array_long_long.h  whisker_generic_array_pthread_t.c  whisker_generic_array_pthread_t.h  whisker_generic_array_short.c  whisker_generic_array_short.h  whisker_generic_array_uint16_t.c  whisker_generic_array_uint16_t.h  whisker_generic_array_uint32_t.c  whisker_generic_array_uint32_t.h  whisker_generic_array_uint64_t.c  whisker_generic_array_uint64_t.h  whisker_generic_array_uint8_t.c  whisker_generic_array_uint8_t.h  whisker_generic_array_unsigned_char.c  whisker_generic_array_unsigned_char.h  whisker_generic_array_unsigned_int.c  whisker_generic_array_unsigned_int.h  whisker_generic_array_unsigned_long.c  whisker_generic_array_unsigned_long.h  whisker_generic_array_unsigned_long_long.c  whisker_generic_array_unsigned_long_long.h  whisker_generic_array_unsigned_short.c  whisker_generic_array_unsigned_short.h  whisker_generic_array_void_.c  whisker_generic_array_void_.h  (+59 more)
src/modules/: CMakeLists.txt
src/modules/relationships/: CMakeLists.txt  whisker_relationships.c  whisker_relationships.h
src/modules/scheduler_defaults/: CMakeLists.txt  whisker_scheduler_defaults.c  whisker_scheduler_defaults.h
src/modules/scheduler_defaults/systems/: system_disable_startup_phase.c  system_disable_startup_phase.h
src/modules/serialisation/: CMakeLists.txt  whisker_serialisation.c  whisker_serialisation.h
templates/: c.template  h.template
templates/whisker-c-module-template/: cookiecutter.json
templates/whisker-c-module-template/{{cookiecutter.module_name}}/: CMakeLists.txt  whisker_{{cookiecutter.module_name}}.c  whisker_{{cookiecutter.module_name}}.h
tests/: CMakeLists.txt  DiscoverCheckTests.cmake  test_whisker_arena.c  test_whisker_array.c  test_whisker_block_array.c  test_whisker_buffered_sparse_set.c  test_whisker_command_buffer.c  test_whisker_component_registry.c  test_whisker_debug.c  test_whisker_dict.c  test_whisker_ecs.c  test_whisker_ecs_archetype.c  test_whisker_ecs_component.c  test_whisker_ecs_entity.c  test_whisker_ecs_system.c  test_whisker_ecs_world.c  test_whisker_entity_registry.c  test_whisker_fnv1a.c  test_whisker_hashmap.c  test_whisker_hook_registry.c  test_whisker_macros.c  test_whisker_memory.c  test_whisker_query_iterator.c  test_whisker_query_registry.c  test_whisker_random.c  test_whisker_scheduler.c  test_whisker_singleton_registry.c  test_whisker_sparse_bitset.c  test_whisker_sparse_set.c  test_whisker_string.c  test_whisker_string_table.c  test_whisker_system_registry.c  test_whisker_thread_pool.c  test_whisker_time.c  test_whisker_trie.c  test_whisker_xxhash64.c
tests/modules/: test_relationships.c  test_scheduler_defaults.c  test_serialisation.c
